[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/map/Infobox.gd" type="Script" id=1]
[ext_resource path="res://ui/NinePatchPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/map/Map.gd" type="Script" id=3]

[sub_resource type="Theme" id=1]

[node name="Map" type="Control"]
process_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="NinePatchPanel" parent="MarginContainer" instance=ExtResource( 2 )]
offset_right = 1024.0
offset_bottom = 600.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/NinePatchPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="MarginContainer/NinePatchPanel/MarginContainer2"]
offset_right = 994.0
offset_bottom = 570.0
clip_contents = true
mouse_filter = 2
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Movement" type="Control" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Infobox" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -121.0
offset_right = 0.0
offset_bottom = 0.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer"]
offset_right = 120.0
offset_bottom = 104.0

[node name="Name" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
offset_right = 120.0
offset_bottom = 14.0

[node name="Biome" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 18.0
offset_right = 120.0
offset_bottom = 32.0

[node name="Faction" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 36.0
offset_right = 120.0
offset_bottom = 50.0

[node name="Planets" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 120.0
offset_bottom = 68.0

[node name="Aliens" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
offset_top = 72.0
offset_right = 120.0
offset_bottom = 86.0

[node name="Sleepers" type="Label" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/Infobox/MarginContainer/VBoxContainer"]
offset_top = 90.0
offset_right = 120.0
offset_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 75.0

[node name="Recenter" type="Button" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/VBoxContainer"]
offset_right = 75.0
offset_bottom = 20.0
text = "Re-Center"

[node name="Mode" type="OptionButton" parent="MarginContainer/NinePatchPanel/MarginContainer2/Panel/VBoxContainer"]
offset_top = 24.0
offset_right = 75.0
offset_bottom = 44.0

[connection signal="pressed" from="MarginContainer/NinePatchPanel/MarginContainer2/Panel/VBoxContainer/Recenter" to="." method="_on_Recenter_pressed"]
[connection signal="item_selected" from="MarginContainer/NinePatchPanel/MarginContainer2/Panel/VBoxContainer/Mode" to="." method="_on_Mode_item_selected"]
